--- a/.gitignore
+++ b/.gitignore
@@ -50,9 +50,4 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-Debug/E-olien.bin
-Debug/E-olien.list
-Debug/makefile
-Debug/projet-f103.bin
-Debug/projet-f103.list
-/Debug/
+/Debug
