--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ Mkfile.old
 dkms.conf
 /Debug
 .settings/language.settings.xml
+appli/pressionTemp.c
+appli/pressionTemp.h
+appli/pressionTemp.h
+appli/pressionTemp.c
+appli/pressionTemp.c
+appli/pressionTemp.h
